--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./pages/index.css">
-    <title>Document</title>
+    <title>Путешествия по России</title>
 </head>
 <body class="main-class">
     <section class="main-class">
@@ -124,6 +124,7 @@
                     </article>
                 </div>
             </section>
+        </section>
             <section class="cover">
                 <img class="cover__background" src="images/cover/cover-trains.jpg" alt="Trains">
                 <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
@@ -134,8 +135,6 @@
                     </article>
                 </a>
             </section>
-        </section>
-
         <section class="page">
             <section class="footer">
                 <a class="footer__link link-hover" href="https://yandex.ru/maps">Карты</a>
