--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link link-hover" href="http://www.park-kosa.ru">park-kosa.ru</a>
+                        <a class="place__link link-hover" href="http://www.park-kosa.ru" target="_blank">park-kosa.ru</a>
                     </div>
                     <figure class="place__image"></figure>
                     <article>
@@ -80,7 +80,7 @@
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link link-hover" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+                        <a class="place__link link-hover" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
                     </div>
                     <figure class="place__image"></figure>
                     <article>
@@ -92,7 +92,7 @@
                     <h2 class="place__title">Алтай</h2>
                     <article class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link link-hover" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+                        <a class="place__link link-hover" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
                     </article>
                     <figure class="place__image"></figure>
                     <article>
@@ -104,7 +104,7 @@
                     <h2 class="place__title">Зимний Байкал</h2>
                     <article class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link link-hover" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+                        <a class="place__link link-hover" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                     </article>
                     <figure class="place__image"></figure>
                     <article>
@@ -116,7 +116,7 @@
                     <h2 class="place__title">Карелия</h2>
                     <article class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a class="place__link link-hover" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+                        <a class="place__link link-hover" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                     </article>
                     <figure class="place__image"></figure>
                     <article>
@@ -127,7 +127,7 @@
         </section>
             <section class="cover">
                 <img class="cover__background" src="images/cover/cover-trains.jpg" alt="Trains">
-                <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+                <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
                     <figure class="cover__overlay"></figure>
                     <article class="cover__text">
                         <h2 class="cover__text_title">До Байкала «на собаках»</h2>
@@ -137,11 +137,11 @@
             </section>
         <section class="page">
             <section class="footer">
-                <a class="footer__link link-hover" href="https://yandex.ru/maps">Карты</a>
-                <a class="footer__link link-hover" href="https://yandex.ru/pogoda">Погода</a>
-                <a class="footer__link link-hover" href="https://rasp.yandex.ru">Расписание</a>
-                <a class="footer__link link-hover" href="https://calendar.yandex.ru">Календарь</a>
-                <a class="footer__link link-hover" href="https://travel.yandex.ru">Путешествие</a>
+                <a class="footer__link link-hover" href="https://yandex.ru/maps" target="_blank">Карты</a>
+                <a class="footer__link link-hover" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+                <a class="footer__link link-hover" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+                <a class="footer__link link-hover" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+                <a class="footer__link link-hover" href="https://travel.yandex.ru" target="_blank">Путешествие</a>
                 <p class="footer__author">© 2021. Roman Chernik</p>
             </section>
         </section>
