--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                 <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
                     <figure class="cover__overlay"></figure>
                     <article class="cover__text">
-                        <h2 class="cover__text_title">До Байкала «на собаках»</h2>
-                        <p class="cover__text_subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                        <h2 class="cover__text-title">До Байкала «на собаках»</h2>
+                        <p class="cover__text-subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
                     </article>
                 </a>
             </section>
