--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <section class="page">
         <section class="header">
             <img class="header__image" src="./images/header/header-logo.svg" alt="Россия">
-            <p class="header__lang-link header__lang-link__lang header__lang-link_underline">Ru</p>
-            <p class="header__lang-link header__lang-link__lang">En</p>
+            <p class="header__lang-link header__lang-link_underline">Ru</p>
+            <p class="header__lang-link">En</p>
         </section>
     </section>
     <section class="lead">
