--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body class="root">
     <header class="header">
       <img class="header__image" src="./images/header/header-logo.svg" alt="Россия" />
-      <a class="header__lang-link link-hover header__lang-link_active" href="#">Ru</a>
-      <a class="header__lang-link link-hover" href="#">En</a>
+      <a class="header__lang-link link-hover header__lang-link_active" href="#" target="_blank">Ru</a>
+      <a class="header__lang-link link-hover" href="#" target="_blank">En</a>
     </header>
     <main class="content">
       <section class="lead">
@@ -36,18 +36,18 @@
         </ul>
       </section>
       <section class="photo-grid">
-        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-train.jpg" />
-        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" />
-        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-tuman.jpg" />
-        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-sochi.jpg" />
-        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-arisa.jpg" />
-        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-baikal.jpg" />
-        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-elbrus.jpg" />
-        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-kondratiev.jpg" />
-        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-kamchatka-1.jpg" />
-        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-kamchatka-2.jpg" />
-        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-baikal-2.jpg" />
-        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-ergaki.jpg" />
+        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-train.jpg" alt="Окно поезда"/>
+        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-atharva-tulsi.jpg" alt="Горы"/>
+        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-tuman.jpg" alt="Туман"/>
+        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-sochi.jpg" alt="Сочи"/>
+        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-arisa.jpg" alt="Лед"/>
+        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-baikal.jpg" alt="Байкал"/>
+        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-elbrus.jpg" alt="Эльбрус"/>
+        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-kondratiev.jpg" alt="Кондратьев"/>
+        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-kamchatka-1.jpg" alt="Камчатка"/>
+        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-kamchatka-2.jpg" alt="Камчатка2"/>
+        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-baikal-2.jpg" alt="Байкал2"/>
+        <img class="photo-grid__item" src="./images/photo-grid/photo-grid-ergaki.jpg" alt="Ергаки"/>
       </section>
       <section class="places">
         <article class="place">
@@ -56,7 +56,7 @@
             <p class="place__url-heading">url</p>
             <a class="place__link link-hover" href="http://www.park-kosa.ru" target="_blank">park-kosa.ru</a>
           </div>
-          <img class="place__image" src="./images/place/place-kosa.jpg" />
+          <img class="place__image" src="./images/place/place-kosa.jpg" alt="Куршская коса"/>
           <div>
             <p class="place__paragraph">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского
@@ -74,7 +74,7 @@
             <p class="place__url-heading">url</p>
             <a class="place__link link-hover" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
           </div>
-          <img class="place__image" src="./images/place/place-kolsky.jpg" />
+          <img class="place__image" src="./images/place/place-kolsky.jpg" alt="Кольский"/>
           <div>
             <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
             <p class="place__paragraph">
@@ -89,7 +89,7 @@
             <p class="place__url-heading">url</p>
             <a class="place__link link-hover" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
           </article>
-          <img class="place__image" src="./images/place/place-altai.jpg" />
+          <img class="place__image" src="./images/place/place-altai.jpg" alt="Алтай"/>
           <div>
             <p class="place__paragraph">
               Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
@@ -107,7 +107,7 @@
             <p class="place__url-heading">url</p>
             <a class="place__link link-hover" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </article>
-          <img class="place__image" src="./images/place/place-winter-baikal.jpg" />
+          <img class="place__image" src="./images/place/place-winter-baikal.jpg" alt="Зимний Байкал"/>
           <div>
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
             <p class="place__paragraph">
@@ -122,7 +122,7 @@
             <p class="place__url-heading">url</p>
             <a class="place__link link-hover" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
           </article>
-          <img class="place__image" src="./images/place/place-karelia.jpg" />
+          <img class="place__image" src="./images/place/place-karelia.jpg" alt="Карелия"/>
           <div>
             <p class="place__paragraph">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда
