--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         </article>
         <article class="place">
           <h3 class="place__title">Алтай</h3>
-          <article class="place__website">
+          <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link link-hover" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
-          </article>
+          </div>
           <img class="place__image" src="./images/place/place-altai.jpg" alt="Алтай"/>
           <div>
             <p class="place__paragraph">
@@ -103,10 +103,10 @@
         </article>
         <article class="place">
           <h3 class="place__title">Зимний Байкал</h3>
-          <article class="place__website">
+          <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link link-hover" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
-          </article>
+          </div>
           <img class="place__image" src="./images/place/place-winter-baikal.jpg" alt="Зимний Байкал"/>
           <div>
             <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -116,12 +116,12 @@
             </p>
           </div>
         </article>
-        <article class="place">
+        <div class="place">
           <h3 class="place__title">Карелия</h3>
-          <article class="place__website">
+          <div class="place__website">
             <p class="place__url-heading">url</p>
             <a class="place__link link-hover" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
-          </article>
+          </div>
           <img class="place__image" src="./images/place/place-karelia.jpg" alt="Карелия"/>
           <div>
             <p class="place__paragraph">
@@ -133,6 +133,7 @@
         </article>
       </section>
       <section class="cover">
+        <img class="cover__background" src="./images/cover/cover-trains.jpg" alt="Поезда">
         <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
           <div class="cover__text">
             <h2 class="cover__text-title">До Байкала «на собаках»</h2>
