--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </p>
           </div>
         </article>
-        <div class="place">
+        <article class="place">
           <h3 class="place__title">Карелия</h3>
           <div class="place__website">
             <p class="place__url-heading">url</p>
